<resources>
    <string name="app_name">WorkoutApp</string>
    <string name="image">image</string>
    <string name="str_start">BEGIN!</string>
    <string name="ready">GET READY FOR</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="exercise_name">Exercise name</string>
    <string name="end">END</string>
    <string name="finish">FINISH</string>
    <string name="finish_workout">You have finished the workout!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="quit_text">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="bmi_value">15.00</string>
    <string name="normal_bmi">Normal</string>
    <string name="calculate">CALCULATE</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="weight_in_lbs">WEIGHT (in lbs)</string>
    <string name="history">History</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
</resources>