<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_screen_image_height"
        android:contentDescription="@string/image"
        android:src="@drawable/app_bg"
        android:layout_marginEnd="5dp"/>






        <LinearLayout
            android:id="@+id/llstartbtn"
            android:layout_width="@dimen/start_button_size"
            android:layout_height="@dimen/start_button_size"
            android:layout_marginTop="@dimen/start_button_margin_top"
            android:gravity="center"
            android:background="@drawable/item_circular_color_accent_border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_start"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/start_button_label_textsize"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:gravity="center"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llBMI"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/calculator"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llHistory"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_round_date_range" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/history"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>